# CG

./: .gitignore  CMakeLists.txt  PROJECT_HIGHLIGHTS.md  README.md  SECTOR_COORDINATE_SYSTEM.md  planetgravitypart.txt
assets/BlendObj/: planet1.blend  planet1.mtl  plastered_stone_wall_2k.blend  player.mtl
docs/: ADDING_NEW_SYSTEMS.md  CELESTIAL_FOLLOW_SYSTEM.md  ENGINE_ARCHITECTURE.md  GLB_LOADING.md  KEY_VARIABLES  MODEL_LOADING_GUIDE.md  MULTI_TEXTURE_LOADING_SUMMARY.md  PLANETARY_GRAVITY_DESIGN.md  REFERENCE_FRAME_AND_ALIGNMENT_SUMMARY.md  REFERENCE_FRAME_REDESIGN.md  SECTOR_OBJECT_TYPES.md  SECTOR_PHYSICS_DESIGN.md  SECTOR_SYSTEM_DESIGN.md  SPACECRAFT_LOADING_EXAMPLE.cpp
scripts/: cleanup.ps1  extract_unitypackage.ps1
shaders/: basic.hlsl  skybox.hlsl  textured.hlsl
src/: main.cpp
src/audio/: AudioSystem.cpp  AudioSystem.h
src/core/: DebugManager.h  ECS.h  Engine.cpp  Engine.h  TimeManager.h
src/gameplay/: CelestialAttachmentSystem.h  CelestialFollowSystem.h  FPSCharacterController.h  OrbitSystem.h  PlayerAlignmentSystem.h  PlayerSystem.cpp  PlayerSystem.h  RigidBodyCelestialFollowSystem.h  SpacecraftControlSystem.h  SpacecraftControlSystemNew.h  SpacecraftDrivingSystem.cpp  SpacecraftDrivingSystem.h  SpacecraftInteractionSystem.h  SpacecraftInteractionSystemNew.h
src/gameplay/components/: CelestialAttachmentComponent.h  CharacterControllerComponent.h  OrbitComponent.h  PlayerAlignmentComponent.h  PlayerComponent.h  PlayerInputComponent.h  SpacecraftComponent.h  StandingOnComponent.h
src/graphics/: CameraMode.h  CameraModeSystem.cpp  CameraModeSystem.h  FreeCameraSystem.cpp  FreeCameraSystem.h  LightweightRenderQueue.cpp  LightweightRenderQueue.h  RenderBackend.cpp  RenderBackend.h  RenderBatchQueue.h  RenderItem.h  RenderQueue.cpp  RenderQueue.h  RenderSystem.cpp  RenderSystem.h  SkyboxRenderer.cpp  SkyboxRenderer.h
src/graphics/components/: CameraComponent.h  FreeCameraComponent.h  LightComponent.h  MeshComponent.h  RenderPriorityComponent.h  RenderableComponent.h
src/graphics/resources/: AssimpLoader.cpp  AssimpLoader.h  Material.h  Mesh.cpp  Mesh.h  OBJLoader.cpp  OBJLoader.h  Shader.cpp  Shader.h  TerrainGenerator.cpp  (+3 more)
src/input/: InputManager.cpp  InputManager.h
src/physics/: ApplyGravitySystem.h  CelestialBodyFollowSystem.h  CoordinateSystem.h  DynamicAttachSystem.h  GravitySystem.h  OrbitSystem.cpp  OrbitSystem.h  PhysXManager.cpp  PhysXManager.h  PhysicsSystem.cpp  PhysicsSystem.h  ReferenceFrameSystem.h  SectorPhysicsSystem.cpp  SectorPhysicsSystem.h  SectorSystem.h
src/scene/: Scene.cpp  Scene.h  SceneAssetLoader.cpp  SceneAssetLoader.h  SceneManager.cpp  SceneManager.h  SolarSystemBuilder.h  SolarSystemConfig.h
src/ui/: UISystem.cpp  UISystem.h
(+12 files in other folders)
